--- a/index.html
+++ b/index.html
@@ -344,15 +344,15 @@
 /* CONFIGURATION & DATA 
 */
 const TASKS = [
-  { id: 'backend', title: 'Backend + System Design', desc: 'Deep projects: scalable services, queues, caching' },
-  { id: 'dsa_problems', title: 'DSA (C++) — Problems', desc: 'Focused problem solving: 200–250 quality problems' },
-  { id: 'dsa_learning', title: 'DSA — Theory', desc: 'Theory learning and understanding the concepts' },
-  { id: 'cs', title: 'CS Fundamentals', desc: 'OS/DBMS/Networks/System design basics' },
-  { id: 'python_learning', title: 'Python — Learning', desc: 'Core syntax, stdlib, OOP, idiomatic Python' },
-  { id: 'python_projects', title: 'Python — Projects', desc: 'Build mini-projects: scripts, automation, small apps' },
-  { id: 'webdev_project', title: 'Web Dev — Project', desc: 'Build a full-stack project: deploy, README, tests' },
-  { id: 'github', title: 'GitHub & Resume', desc: 'Polish docs, README, resume' },
-  { id: 'wedev', title: 'Web Development (Learning)', desc: 'Learning about the concepts' }
+  { id: 'backend', title: '📒Backend + System Design', desc: 'Deep projects: scalable services, queues, caching' },
+  { id: 'dsa_problems', title: '🖊DSA (C++)  (Problems)', desc: 'Focused problem solving: 200–250 quality problems' },
+  { id: 'dsa_learning', title: '📖DSA  (Learning)', desc: 'Theory learning and understanding the concepts' },
+  { id: 'cs', title: '📒CS Fundamentals', desc: 'OS/DBMS/Networks/System design basics' },
+  { id: 'python_learning', title: '📖Python (Learning)', desc: 'Core syntax, stdlib, OOP, idiomatic Python' },
+  { id: 'python_projects', title: '🖊Python  (Projects)', desc: 'Build mini-projects: scripts, automation, small apps' },
+  { id: 'webdev_project', title: '🖊Web Dev  (Project)', desc: 'Build a full-stack project: deploy, README, tests' },
+  { id: 'github', title: '📒GitHub & Resume', desc: 'Polish docs, README, resume' },
+  { id: 'wedev', title: '📖Web Dev (Learning)', desc: 'Learning about the concepts' }
 ];
 
 const STORAGE_KEY = 'priority_roadmap_v1';
